[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Photo.tscn" type="PackedScene" id=2]
[ext_resource path="res://FamilyTreeAdd.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 1 )

[node name="FamilyTreeAdd" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Photo" parent="." instance=ExtResource( 2 )]
margin_top = 192.0
margin_bottom = 192.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="ButtonControl" type="Node2D" parent="."]
position = Vector2( 384, 256 )

[node name="Button" type="Button" parent="ButtonControl"]
margin_right = 64.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="ButtonControl"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 256, 192 )
[connection signal="pressed" from="ButtonControl/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonControl/Button2" to="." method="_on_Button2_pressed"]
